2005-12-10  Ulrich Drepper  <drepper@redhat.com

	* run-readelf-test1.sh: New file.
	* Makefile.am (TESTS): Add run-readelf-test1.sh.
	(EXTRA_DIST): Likewise.

2005-12-07  Roland McGrath  <roland@redhat.com>

	* ecp.c (main): Use elf_end to clean up.

2005-11-25  Roland McGrath  <roland@redhat.com>

	* coverage.sh: Given -v argument, print names of unused files.

	* addrscopes.c (main): Use dwfl_end before return.
	* allregs.c (main): Likewise.
	* find-prologues.c (main): Likewise.
	* funcretval.c (main): Likewise.
	* funcscopes.c (main): Likewise.
	* line2addr.c (main): Likewise.

	* run-allregs.sh: New file.
	* Makefile.am (TESTS, EXTRA_DIST): Add it.

	* allregs.c: Use libdwfl wrapper instead of direct libebl calls.
	* Makefile.am (allregs_LDADD): Updated.

	* allregs.c: New file.
	* Makefile.am (noinst_PROGRAMS): Add it.
	(allregs_LDADD): New variable.

2005-11-18  Roland McGrath  <roland@redhat.com>

	* test-subr.sh (installed_testrun): Treat /usr/lib64 like /usr/lib.
	* test-wrapper.sh: Likewise.

2005-11-17  Roland McGrath  <roland@redhat.com>

	* Makefile.am (installed_TESTS_ENVIRONMENT): Set libdir, bindir in
	environment for test-wrapper.sh.
	* test-wrapper.sh: Set LD_LIBRARY_PATH from ${libdir} if not /usr/lib.
	* test-subr.sh (installed_testrun): Likewise.
	Use explicit path in ${bindir}.

	* Makefile.am (installcheck-local): Fix typo in last change.

2005-11-16  Roland McGrath  <roland@redhat.com>

	* configure.ac: New file, for standalone build/dist of test suite.
	* Makefile.am [!STANDALONE] (INCLUDES): Don't define it.
	(asm_TESTS): New variable, broken out of ...
	(TESTS): ... here.  Also remove msg_tst.
	[!STANDALONE] (TESTS, noinst_PROGRAMS): Add in $(asm_TESTS), msg_tst.
	(installed_TESTS_ENVIRONMENT): New variable.
	[STANDALONE] (TESTS_ENVIRONMENT): Use that.
	[!STANDALONE] (installcheck-local): Likewise.
	[STANDALONE] (libdw, libelf, libasm, libebl): Define using -lfoo.
	* addrscopes.c: Include <config.h>.