@@ -1,3 +1,10 @@
+2005-12-13  Roland McGrath  <roland@redhat.com>
+
+	* allregs.c (main): Fail if we find no registers.
+
+	* run-native-test.sh: New file.
+	* Makefile.am (TESTS, EXTRA_DIST): Add it.
+
 2005-12-10  Ulrich Drepper  <drepper@redhat.com
 
 	* run-readelf-test1.sh: New file.
